made video compatible

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 *.xcuserstate
 *.xcuserstate
 *.xcbkptlist
+Configurator.xcodeproj/xcuserdata/kunalpatil.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+Configurator.xcodeproj/project.xcworkspace/xcuserdata/kunalpatil.xcuserdatad/UserInterfaceState.xcuserstate
